# de_stock_ingestion

./: .gitignore  README.md  pyproject.toml  setup_infrastructure.sh
src/: run_daily_pipeline.py
src/ingestion/: bigquery_loader.py  finance_ingestor.py  gold_processor.py  silver_processor.py
tests/: __init__.py  test_bigquery_loader.py  test_finance_ingestor.py  test_gold_processor.py  test_silver_processor.py
